TEST_PROGRAMS/INVALID/frederic_lafrance/4.min
# Illegal character in string literal
print "Enter your name:"
